--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Michael Schimkus - Portfolio (v10)</title>
+  <title>Michael Schimkus - Portfolio (v7)</title>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --color-primary-light: #f6fcff;
       --color-white:        #ffffff;
       --color-text:         #222222;
-      --highlight-bg:       rgba(0,123,255,0.35);
+      --highlight-bg:       rgba(0,123,255,0.5);
       --border-radius:      10px;
       --max-width:          1200px;
     }
     *, *::before, *::after {
       box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
     }
     body {
       font-family: 'Public Sans', sans-serif;
@@ -26,116 +25,69 @@
       line-height: 1.6;
       scroll-behavior: smooth;
     }
-    .container {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
-    header, footer {
-      text-align: center;
-      padding: 0.5rem 0;
-      background: var(--color-white);
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin: 1rem 0;
-      font-weight: 600;
-    }
-    header h1 {
-      font-size: 2rem;
-      margin: 0;
-    }
+    .container { max-width: var(--max-width); margin: 0 auto; padding: 0 1rem; }
+    /* Nav restored to stacked layout */
     nav {
       display: flex;
-      justify-content: center;
-      gap: 1.5rem;
+      flex-direction: column;
+      align-items: center;
       background: var(--color-white);
       border-radius: var(--border-radius);
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       padding: 0.5rem 0;
       margin: 1rem 0;
+      gap: 0.5rem;
     }
-    nav a {
+    .nav-title { font-size: 2.2rem; font-weight: 600; text-shadow: 0 0 1px rgba(176,176,176,0.7); }
+    .nav-links { display: flex; gap: 1.5rem; }
+    .nav-links a {
       color: var(--color-text);
-      padding: 0.3rem 1rem;
+      padding: 0.2rem 1rem;
+      font-weight: 600;
       font-size: 1.2rem;
-      font-weight: 600;
       text-decoration: none;
+      transition: background-color 0.25s ease;
       border-radius: var(--border-radius);
-      transition: background-color 0.25s;
     }
-    nav a:hover,
-    nav a.active { background-color: var(--highlight-bg); }
-    main {
-      padding-bottom: 1rem;
-    }
-    section.card {
-      background: var(--color-white);
-      border-radius: var(--border-radius);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      margin: 1.5rem 0;
-      padding: 1.5rem;
-    }
-    .card h2 {
-      font-size: 1.6rem;
-      font-weight: 800;
-      margin-bottom: 0.5rem;
-    }
-    .gallery-item img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .project-title {
-      font-size: 1rem;
-      font-weight: 600;
-      margin-top: 0.5rem;
-      text-align: center;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    input, textarea {
-      padding: 0.85rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font: inherit;
-    }
-    button {
-      background: var(--color-primary-mid);
-      color: var(--color-white);
-      padding: 0.85rem;
-      border: none;
-      font-weight: 700;
-      border-radius: 8px;
-      cursor: pointer;
-    }
+    .nav-links a.active { background-color: var(--highlight-bg); }
+    main { padding-bottom: 1rem; }
+    .section-title { font-size: 1.7rem; font-weight: 800; margin: 0 0 0.5rem; text-shadow: 0 0 1px var(--color-white); text-align: left; }
+    .card { background: var(--color-white); padding: 1.5rem; border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1.5rem 0; }
+    .gallery-item { text-align: center; }
+    .gallery-item img { width: 100%; height: auto; object-fit: contain; border-radius: 8px; cursor: pointer; }
+    .project-title { font-size: 1rem; font-weight: 600; margin: 0.5rem 0 0; text-align: center; }
+    form { display: flex; flex-direction: column; gap: 1rem; }
+    input, textarea { padding: 0.85rem; border: 1px solid #ccc; border-radius: 8px; font: inherit; }
+    button { background: var(--color-primary-mid); color: var(--color-white); padding: 0.85rem; border: none; font-weight: 700; border-radius: 8px; cursor: pointer; }
+    footer.footer { text-align: center; padding: 0.5rem; background: var(--color-white); border-radius: var(--border-radius); box-shadow: 0 6px 20px rgba(0,0,0,0.1); margin: 1rem 0; font-size: 0.9rem; font-weight: 600; text-shadow: 0 0 1px var(--color-white); }
   </style>
 </head>
 <body>
-  <header class="container"><h1>Michael Schimkus</h1></header>
-  <nav class="container">
-    <a href="#about" class="nav-link">About</a>
-    <a href="#portfolio" class="nav-link">Portfolio</a>
-    <a href="#contact" class="nav-link">Contact</a>
-  </nav>
+  <div class="container">
+    <nav id="site-nav">
+      <div class="nav-title">Michael Schimkus</div>
+      <div class="nav-links">
+        <a href="#about" class="nav-link">About</a>
+        <a href="#portfolio" class="nav-link">Portfolio</a>
+        <a href="#contact" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </div>
   <main class="container">
     <section id="about" class="card">
-      <h2>About</h2>
-      <p>This is a sample paragraph for the About section. It describes who you are, what you do, and what your goals might be.</p>
-      <p>This is a second sample paragraph for demonstration purposes.</p>
+      <h2 class="section-title">About</h2>
+      <p>This is a sample paragraph for the About section. It describes who you are, what you do, and what your goals might be. It gives visitors a brief introduction.</p>
+      <p>This is a second sample paragraph for demonstration purposes. You might include hobbies, your work ethic, or what makes you unique.</p>
     </section>
     <section id="portfolio" class="card">
-      <h2>Portfolio</h2>
+      <h2 class="section-title">Portfolio</h2>
       <div class="gallery-item">
         <h3 class="project-title">Population Change in Communities Outside Joshua Tree National Park</h3>
         <img src="project1.jpg" alt="Population Change in Communities Outside Joshua Tree National Park">
       </div>
     </section>
     <section id="contact" class="card">
-      <h2>Contact</h2>
+      <h2 class="section-title">Contact</h2>
       <form>
         <input type="text" placeholder="Your Name" required />
         <input type="email" placeholder="Your Email" required />
@@ -144,18 +96,18 @@
       </form>
     </section>
   </main>
-  <footer class="container">&copy; 2025 Michael Schimkus | Return to top | v10</footer>
+  <div class="container">
+    <footer class="footer">
+      &copy; 2025 Michael Schimkus | <a href="#" style="text-decoration:none; color:var(--color-text);">Return to top</a> | v7
+    </footer>
+  </div>
   <script>
     const navLinks = document.querySelectorAll('.nav-link');
-    const secs = document.querySelectorAll('section');
-    function setActive(id) {
-      navLinks.forEach(l => l.classList.toggle('active', l.getAttribute('href') === `#${id}`));
-    }
-    window.addEventListener('scroll', () => {
-      let current = '';
-      secs.forEach(s => { if (pageYOffset >= s.offsetTop - 60) current = s.id; });
-      if (current) setActive(current);
-    });
+    const sections = document.querySelectorAll('section');
+    function setActiveLink(id) { navLinks.forEach(link => link.classList.toggle('active', link.getAttribute('href')===`#${id}`)); }
+    function updateActiveSection() { let current=''; sections.forEach(sec=>{ if(window.pageYOffset>=sec.offsetTop-nav.offsetHeight) current=sec.id; }); if(current) setActiveLink(current); }
+    window.addEventListener('scroll',updateActiveSection);
+    updateActiveSection();
   </script>
 </body>
 </html>
